Adds NR7 section III progress component
Implements a new component to display progress for section III of the NR7 form.

The component provides an overview of target completion status, including fully completed, partially completed, and not started targets.
It also displays individual target progress with detailed information about mandatory fields and indicator data completion.
Includes information alerts to guide the user about the progress information.

The overview page has also been updated with an information alert.

--- a/i18n/en/components/pages/nr7/my-country/edit/nr7-edit-overview.json
+++ b/i18n/en/components/pages/nr7/my-country/edit/nr7-edit-overview.json
@@ -53,5 +53,11 @@
     "notSubmitted" : "Not submitted",
     "missingIndicatorData" : "Missing indicator data",
     "missingIndicatorFieldsMessage" : "Please ensure that all records marked in red are completed, as there is still mandatory information missing in some of your record(s).",
-    "missingIndicatorDataMessage" : "You have not yet added any indicator data for following indicators. Please add the data before proceeding."
+    "missingIndicatorDataMessage" : "You have not yet added any indicator data for following indicators. Please add the data before proceeding.",
+    "pdfInfo": "Click on preview to generate PDF or print NR7",
+    "info": "Info",
+    "infoMessage": "The progress shown in this section is for informational purposes only. It may differ slightly from the actual data you have provided. Minor differences can be ignored—this feature is simply intended to give you an overall sense of how far the country has progressed in entering information in NR7. For accurate confirmation of any missing information, please use the validation button above, which provides the final and authoritative status of your submission.",
+    "progressInfo": "The progress shown in this section is for informational purposes only. It may differ slightly from the actual data you have provided. Minor differences can be ignored—this feature is simply intended to give you an overall sense of how far the country has progressed in entering information in NR7.",
+    "validationProgressInfo": "For accurate confirmation of any missing information, please use the validation button above, which provides the final and authoritative status of your submission.",
+    "pdf": "PDF"
 }
