Improves NR7 edit overview section status
Enhances the NR7 edit overview page to visually indicate the validation status of each section. Sections now display a green border and background when validation is successful, providing immediate positive feedback to the user.

Also, adds "Validation successful" message when no errors are found.

--- a/i18n/en/components/pages/nr7/my-country/edit/nr7-edit-overview.json
+++ b/i18n/en/components/pages/nr7/my-country/edit/nr7-edit-overview.json
@@ -61,5 +61,6 @@
     "validationProgressInfo": "For accurate confirmation of any missing information, please use the validation button above, which provides the final and authoritative status of your submission.",
     "pdf": "PDF",
     "showSectionIIIProgress": "Show section III progress",
-    "hideSectionIIIProgress": "Hide section III progress"
+    "hideSectionIIIProgress": "Hide section III progress",
+    "noErrors": "Validation successful"
 }
