--- a/i18n/en/components/pages/nr7/my-country/view/nr7-view-target-indicators.json
+++ b/i18n/en/components/pages/nr7/my-country/view/nr7-view-target-indicators.json
@@ -3,5 +3,6 @@
     "binary": "Binary",
     "component": "Component",
     "complementary": "Complementary",
-    "national": "National"
+    "national": "National",
+    "allIndicatorDataInfo": "Please note that all indicator data is located in the annex of the PDF."
 }
