--- a/i18n/en/components/pages/nr7/my-country/view/nr7-view.json
+++ b/i18n/en/components/pages/nr7/my-country/view/nr7-view.json
@@ -1,3 +1,5 @@
 {
-    "nr7Title": "7th National Report"
+    "nr7Title": "7th National Report",
+    "annex": "Annex :",
+    "indicatorData": "Indicator Data"
 }
