--- a/i18n/en/components/pages/nr7/my-country/edit/nr7-edit-section-IV.json
+++ b/i18n/en/components/pages/nr7/my-country/edit/nr7-edit-section-IV.json
@@ -11,5 +11,6 @@
     "componentAndComplementaryIndicators": "Would you like to provide data for Component and Complementary indicators on Global Biodiversity Framework (GBF) Goal",
     "complementaryIndicators" : "Complementary indicators",
     "componentIndicators"      : "Component indicators",
-    "sectionMandatory" : "All fields in Section IV are mandatory"
+    "sectionMandatory" : "All fields in Section IV are mandatory",
+    "annex": "Annex :"
 }
