Adds stakeholder commitments translation
Adds the "Stakeholder Commitments" translation to the dashboard page in the English language file.

This ensures that the new section title on the dashboard is properly translated for English-speaking users.

--- a/i18n/en/pages/dashboard.json
+++ b/i18n/en/pages/dashboard.json
@@ -40,5 +40,6 @@
     "needHelpContent"         : "Use the Chat feature for additional support.",
     
     "workflowRequestsTitle":"Workflow requests",
-    "workflowAlert":"The following records require your action or you have requested action."
+    "workflowAlert":"The following records require your action or you have requested action.",
+    "commitments":"Stakeholder Commitments"
 }
