Updates country review status labels
Updates the labels for country review statuses to provide clarity.
Specifically, replaces "Published" with "Reviewed" and
"Auto published" with "Auto reviewed".

This change improves the user experience by providing more accurate and
understandable descriptions of the review status.

--- a/i18n/en/components/pages/stakeholders/commitments/country-reviews/country-review-list.json
+++ b/i18n/en/components/pages/stakeholders/commitments/country-reviews/country-review-list.json
@@ -5,7 +5,7 @@
     "updatedOn":"Updated",
     "action" : "Actions",
     "awaitingAction" : "Awaiting action",
-    "published": "Published",
+    "published": "Reviewed",
     "returned": "Returned",
-    "autoPublished": "Auto published"
+    "autoPublished": "Auto reviewed"
 }
