--- a/i18n/en/components/pages/stakeholders/commitments/country-reviews/my-country-reviews.json
+++ b/i18n/en/components/pages/stakeholders/commitments/country-reviews/my-country-reviews.json
@@ -1,6 +1,7 @@
 {
     "awaitingAction" : "Awaiting action",
-    "published": "Published",
+    "published": "Reviewed",
     "returned": "Returned",
-    "autoPublished": "Auto published"
+    "autoPublished": "Auto reviewed",
+    "countryReviews": "Country reviews"
 }
