Updates dashboard labels
Updates the dashboard labels to enhance clarity and accuracy,
specifically changing "Stakeholder Commitments" to "Commitments"
and replacing "countries" with "stakeholders".

--- a/i18n/en/pages/dashboard.json
+++ b/i18n/en/pages/dashboard.json
@@ -41,5 +41,6 @@
     
     "workflowRequestsTitle":"Workflow requests",
     "workflowAlert":"The following records require your action or you have requested action.",
-    "commitments":"Stakeholder Commitments"
+    "commitments":"Commitments",
+    "stakeholders": "Stakeholders"
 }
