Displays message when no headline indicators
Ensures the indicators section is always displayed, even when no
headline indicators are associated with the GBF targets. Adds a
message to inform the user when no indicators are available.
Also initializes indicator arrays to empty arrays to avoid null
reference errors.

Related to target-indicators-17

--- a/i18n/en/components/pages/national-targets/my-country/part-1/edit-target-part-1.json
+++ b/i18n/en/components/pages/national-targets/my-country/part-1/edit-target-part-1.json
@@ -49,5 +49,6 @@
     "additionalExplanation":"Additional explanation",
     "additionalInformation":"Additional information",
     "relevantInformation":"Any other relevant information",
-    "globalGoalsAndTargets":"Global Goals/Targets"
+    "globalGoalsAndTargets":"Global Goals/Targets",
+    "noHeadlineIndicators":"There are no headline indicators associated with the selected GBF targets"
 }
