Adds duplicate record validation and display
Implements robust handling for duplicate records identified during document validation.

- Introduces specific detection for duplicate records by mapping API errors.
- Displays a dedicated alert message for duplicate records, including the last updated date.
- Provides an inline action to delete identified duplicate records directly from the overview.
- Updates the document object to track `hasDuplicateRecord` status for conditional rendering.
- Enhances the error display toggle to only appear when validation errors are present.
- Adds necessary internationalization keys for new UI elements and messages.

--- a/i18n/en/components/pages/nr7/my-country/edit/nr7-edit-overview.json
+++ b/i18n/en/components/pages/nr7/my-country/edit/nr7-edit-overview.json
@@ -62,5 +62,11 @@
     "pdf": "PDF",
     "showSectionIIIProgress": "Show section III progress",
     "hideSectionIIIProgress": "Hide section III progress",
-    "noErrors": "Validation successful"
+    "noErrors": "Validation successful",
+    "showErrors": "Show errors",
+    "code": "Code",
+    "field": "Field",
+    "message": "Message",
+    "lastUpdated": "Last updated",
+    "duplicateRecordMessage": "This record is a duplicate of another record in the system. Please review and delete one of the records before proceeding."
 }
